<resources>
    <string name="app_name">AstonIntensiv5</string>
    <string name="change_contact_data">Change contact data</string>
    <string name="change_name">Change name</string>
    <string name="change_surname">Change surname</string>
    <string name="change_phone">Change phone</string>
    <string name="save">save</string>
    <string name="smth_went_wrong">something went wrong</string>
    <string name="search">search</string>
    <string name="delete_this_contact">Delete this contact?</string>

</resources>