<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/everywhere_default_padding">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/details_name_size"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/details_surname_size"
        tools:text="@tools:sample/first_names" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/details_phone_number_size"
        tools:text="@tools:sample/first_names" />

    <Button
        android:id="@+id/button_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_contact_data" />

    <EditText
        android:id="@+id/change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/change_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_surname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/change_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_phone"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:visibility="invisible" />

</LinearLayout>
